[project]
name = "vllm-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "fastapi>=0.135.3",
    "huggingface-hub>=0.36.2",
    "openai>=2.31.0",
    "python-dotenv>=1.1.1",
    "sentencepiece>=0.2.1",
    "torch>=2.10.0",
    "transformers>=4.57.6",
    "uvicorn>=0.44.0",
    "vllm>=0.19.0",
]
